<?xml version="1.0"?>
<package>
  <name>ros_reality_bridge</name>
  <version>0.3.1</version>
  <description>The ros_reality_bridge package</description>

  <maintainer email="eric_rosen@brown.edu">Eric Rosen</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>

  <export>
  </export>
</package>
